<resources>
    <string name="app_name">Unit Converter</string>
    <string name="app_title">Unit Converter</string>
    <string name="convert_button_text">CONVERT TO</string>
    <string name="input_value_hint">Enter value</string>
    <string name="output_value_hint">Result</string>
    <string name="from_unit_label">From Unit</string>
    <string name="to_unit_label">To Unit</string>
    <string name="error_please_enter_value">Please enter a value</string>
    <string name="error_invalid_number">Invalid input: Please enter a number</string>

    <string-array name="length_units">
        <item>Meter</item>
        <item>Millimeter</item>
        <item>Mile</item>
        <item>Foot</item>
    </string-array>
</resources>